Added section with user counter, add button and select box

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "bootstraptemplate",
+  "name": "scrum4",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -30,7 +30,8 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss"
+      "scss",
+      "css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
